syntax = "proto3";

package jobseekerauth;

option go_package = "./pkg/pb/auth/jobseeker";

service Jobseeker{
    rpc JobSeekerSignup(JobSeekerSignupRequest) returns (JobSeekerSignupResponse) {};
    rpc JobSeekerLogin(JobSeekerLoginRequest) returns (JobSeekerLoginResponse) {};
    rpc AddProfile(AddProfileRequest) returns (AddProfileResponse); 
    rpc JobSeekerGetProfile(GetProfileRequest) returns (GetProfileResponse); 
    rpc JobSeekerEditProfile(EditProfileRequest) returns (EditProfileResponse); 
    rpc JobSeekerOTPLogin(JobSeekerOTPLoginRequest) returns (JobSeekerOTPLoginResponse); 
    rpc OtpVerification(OtpVerificationRequest) returns (OtpVerificationResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

message JobSeekerSignupRequest {
    string email = 1;
    string password = 2;
    string confirmPassword=3;
    string firstname = 4;
    string lastname = 5;
    string phone_number = 6;
    string date_of_birth = 7;
    string gender=8;
    
}

message JobSeekerSignupResponse {
    int64 status = 1;
    JobSeekerDetails JobSeekerDetails = 2;
    string token = 3;
    string error = 4;
}

message JobSeekerDetails {
    uint64 id = 1;
    string email = 2;
    string firstname = 3;
    string lastname = 4;
    string phone_number = 5;
    string date_of_birth = 6;
    string gender=7;
   
}

message JobSeekerLoginRequest {
    string email = 1;
    string password = 2;
}

message JobSeekerLoginResponse {
    int64 status = 1;
    JobSeekerDetails JobSeekerDetails = 2;
    string token = 3;
    string error = 4;
}
message AddProfileRequest {
    int32 id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string website = 5;
    string location = 6;
    string phone = 7;
    string bio = 8;
    string date_of_birth = 9;
    string gender = 10;
}

message AddProfileResponse {
    int64 status = 1;
    string error = 2;
}
message GetProfileRequest {
    int32 id = 1;
}

message GetProfileResponse {
    int64 status = 1;
    JobSeekerProfile profile = 2;
}

message JobSeekerProfile {
    uint64 id = 1;
    string first_name = 2;
    string gender = 3;
    string email = 4;
    string date_of_birth =5;
    string phone = 6;
    string last_name = 7;
}
message EditProfileRequest {
    int32 id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string website = 5;
    string location = 6;
    string phone = 7;
    string bio = 8;
}

message EditProfileResponse {
    int64 status = 1;
    string name =2;
    string username =3;
    string email =4;
    string website =5;
    string location =6;
    string phone =7;
    string bio =8;
}
message JobSeekerOTPLoginRequest {
    string email = 1; 
}

message JobSeekerOTPLoginResponse {
    int64 status = 1; 
    string otp = 2;   
    string error = 3; 
}
message OtpVerificationRequest {
    string email = 1;
    string otp = 2;
}

message OtpVerificationResponse {
    int64 status = 1;
    bool verified = 2;
    string error = 3;
}
message ChangePasswordRequest {
    int32 user_id = 1;
    string old_password = 2;
    string new_password = 3;
    string re_password = 4;
}

message ChangePasswordResponse {
    int64 status = 1;
    string error = 2;
}